Более универсальное выделение форм
Теперь выделение отступом можно делать отдельно от подсвечивания формы

--- a/lib/css/blocks/a/form.styl
+++ b/lib/css/blocks/a/form.styl
@@ -328,13 +328,13 @@ textarea.Form__input {
 
 
 .Form__set.accent,
+.Form__set.indent {
+	padding: 15px 19px;
+}
+.Form__set.accent,
 .Form__set.accent .Form__label {
 	background-color: #f0f0f0;
 }
-.Form__set.accent {
-	padding: 15px 19px;
-}
-
 .Form__set.accent.main,
 .Form__set.accent.main .Form__label {
 	background-color: #f4f0d2;
