--- a/lib/css/useful.styl
+++ b/lib/css/useful.styl
@@ -95,8 +95,8 @@ img[align="right"],
 }
 
 
-/* изображение растягивается на всю ширину контейнера, не искажаясь */
-.imgFill {
+/* встраиваемое содержимое растягивается на всю ширину контейнера, не искажаясь */
+.embedFill {
 	height: auto;
 	width: 100%;
 }
