Помощники для ширины

--- a/lib/css/helpers.styl
+++ b/lib/css/helpers.styl
@@ -61,8 +61,15 @@
 .cl-b {	clear: both; }
 
 
+.w-full,
+.w-100p { width: 100%; }
+.w-75p { width: 75%; }
+.w-50p { width: 50%; }
+.w-33p { width: 33.3333%; }
+.w-25p { width: 25%; }
+.w-20p { width: 20%; }
+.w-17p { width: 16.6667%; }
 .w-0 { width: 0; }
-.w-full { width: 100%; }
 
 
 .v-a-t { vertical-align: top; }
