--- a/lib/css/blocks/a/table.styl
+++ b/lib/css/blocks/a/table.styl
@@ -56,49 +56,57 @@
 /*doc
 ## Col
 
-Нужна для реализации псевдоколонок. Имеет несколько модификаторов размеров (`w-0`, `w-25p`, `w-33p`, `w-50p`, `w-75p`, `w-100p`).
-Между элементами `Col` не должно быть пробелов.
+Нужна для реализации колонок. Имеет несколько модификаторов размеров.
+Между элементами `.Cols--ib .Col` не должно быть пробелов.
 
-Может использоваться, как псевдоячейка. Удобно задавать размеры в процентах; в отличие от ячейки настоящей таблицы, она будет фиксированных размеров вне зависимости от ширины содержимого.
-
-Выравнивается по середине. Ломает длинные беспробельные слова.
+Ячейкам `.Cols--ib .Col` и `.Cols--t.Cols--fixed .Col` удобно задавать размеры в процентах; в отличие от ячеек `.Cols--t .Col`, они будут фиксированных размеров вне зависимости от ширины содержимого. Ломают длинные беспробельные слова.
 
 ```html
 <div class="Form Form__set accent">
-	<div class="Col__wrapper">
-		<div class="Col w-75p">
-			<div class="Form__field inputFull">
-				<span class="Form__title"><label class="Form__label" for="a">Вакантная должность:</label></span><input type="text" class="Form__input" id="a" value=""/>
-			</div>
-		</div><div class="Col w-25p">
-			<div class="Form__field inputFull">
-				<span class="Form__title"><label class="Form__label" for="b">Количество мест:</label></span><input type="text" class="Form__input" id="b" value=""/>
-			</div>
-		</div>
-	</div>
+  <div class="Cols Cols--ib">
+    <div class="Col w-75p">
+      <div class="Form__field inputFull">
+        <span class="Form__title"><label class="Form__label" for="a">Вакантная должность:</label></span><input type="text" class="Form__input" id="a" value=""/>
+      </div>
+    </div><div class="Col w-25p">
+      <div class="Form__field inputFull">
+        <span class="Form__title"><label class="Form__label" for="b">Количество мест:</label></span><input type="text" class="Form__input" id="b" value=""/>
+      </div>
+    </div>
+  </div>
 </div>
 
 
-<a>
-	<span class="Col name">Имя</span>
-	<span class="Col age">Возраст</span>
-	<span class="Col weight">Вес</span>
+<a class="Cols Cols--t">
+  <span class="Col name">Имя</span>
+  <span class="Col age">Возраст</span>
+  <span class="Col weight">Вес</span>
 </a>
 ```
 */
 
-.Col__wrapper {
-	display: block;
+.Cols { width: 100%; }
+
+.Cols--ib,
+.Cols--fixed {
+  word-wrap: break-word;
 }
-.Col {
+
+.Cols--ib .Col {
 	box-sizing: border-box;
-	display: inline-block;
-	vertical-align: middle;
-	word-wrap: break-word;
+  display: inline-block;
+  vertical-align: top;
 }
-.Col.w-0 {   width: 0; }
-.Col.w-25p { width: 25%; }
-.Col.w-33p { width: 33.33%; }
-.Col.w-50p { width: 50%; }
-.Col.w-75p { width: 75%; }
-.Col.w-100p { width: 100%; }
+
+.Cols--t { display: table; }
+.Cols--t .Col__row { display: table-row; }
+.Cols--t .Col { display: table-cell; }
+
+.Cols--fixed { table-layout: fixed; }
+
+.Cols--1 .Col { width: 100%; }
+.Cols--2 .Col { width: 50%; }
+.Cols--3 .Col { width: 33.3333%; }
+.Cols--4 .Col { width: 25%; }
+.Cols--5 .Col { width: 20%; }
+.Cols--6 .Col { width: 16.6667%; }
