--- a/lib/css/blocks/a/menu.styl
+++ b/lib/css/blocks/a/menu.styl
@@ -2,32 +2,32 @@
 ---------------------------------------------------------------------------*/
 
 /*
-<ul class="Menu Menu--horiz MenuTab" data-tab--name="test">
-	<li class="Menu__item" data-tab--id="0">
+<ul class="Menu Menu--horiz MenuTab" data-tab--id="test">
+	<li class="Menu__item" data-tab--name="0">
 		<a href="" class="Menu__label">Пункт 1</a>
-	</li><li class="Menu__item" data-tab--id="1">
+	</li><li class="Menu__item" data-tab--name="1">
 		<a href="" class="Menu__label">Пункт 2</a>
 	</li>
 </ul>
-<div class="MenuTab__wrapper" data-tab--name="test">
-	<div class="MenuTab__content" data-tab--id="0">a</div>
-	<div class="MenuTab__content" data-tab--id="1">b</div>
+<div class="MenuTab__wrapper" data-tab--id="test">
+	<div class="MenuTab__content" data-tab--name="0">a</div>
+	<div class="MenuTab__content" data-tab--name="1">b</div>
 </div>
 
 
 $(document).on('click', '.MenuTab .Menu__item', function (e) {
 	e.preventDefault();
 
-	// у списка вкладок должен быть идентификатор `data-tab--name`, чтобы связать его со списком содержимого
+	// у списка вкладок должен быть идентификатор `data-tab--id`, чтобы связать его со списком содержимого
 	var obj = $(this);
-	var content = $('.MenuTab__wrapper[data-tab--name="'+ obj.parents('.MenuTab').attr('data-tab--name') +'"]').eq(0);
+	var content = $('.MenuTab__wrapper[data-tab--id="'+ obj.parents('.MenuTab').attr('data-tab--id') +'"]').eq(0);
 
 	if (obj.hasClass('active')) { return false }
 
 	if (content.length) {
 
-		// у каждой из вкладок есть атрибут `data-tab--id`, по которому будет находиться соответствующее содержимое
-		var target = content.find('[data-tab--id="'+ obj.attr('data-tab--id') +'"]');
+		// у каждой из вкладок есть атрибут `data-tab--name`, по которому будет находиться соответствующее содержимое
+		var target = content.find('[data-tab--name="'+ obj.attr('data-tab--name') +'"]');
 
 		content.animate({'height': target.height()}, 300, function () {
 			content.css('height','');
