--- a/lib/css/themer.styl
+++ b/lib/css/themer.styl
@@ -141,6 +141,7 @@ if $theme is defined {
 	resize() {}
 	speak() {}
 	src() {}
+	table-layout() {}
 	text-align() {}
 	text-decoration() {}
 	text-indent() {}
