--- a/project/assets/css/src/partials/blocks_abstract.styl
+++ b/project/assets/css/src/partials/blocks_abstract.styl
@@ -9,7 +9,7 @@
 @require $libBlockA +'embed';
 @require $libBlockA +'link';
 @require $libBlockA +'button';
-@require $libBlockA +'table';
+@require $libBlockA +'col';
 @require $libBlockA +'list';
 @require $libBlockA +'tab';
 @require $libBlockA +'form';
