--- a/lib/css/base.styl
+++ b/lib/css/base.styl
@@ -14,6 +14,12 @@
 
 
 
+$selectionBG = $selectionBG is defined ? $selectionBG : #b3d3fd;
+$selectionC = $selectionC is defined ? $selectionC : #000;
+
+$lineHeight = $lineHeight is defined ? $lineHeight : 1.5em;
+
+
 /* BASE
 ---------------------------------------------------------------------*/
 
