--- a/lib/css/blocks/a/embed.styl
+++ b/lib/css/blocks/a/embed.styl
@@ -5,6 +5,7 @@
 <span class="Icon Icon--actions"></span>
 */
 
+$iconsPath = $iconsPath is defined ? $iconsPath : '/assets/img/interface/ui.png?v=1';
 
 .Icon {
 	@extend .v-a-m-true;
