--- a/lib/css/blocks/a/form.styl
+++ b/lib/css/blocks/a/form.styl
@@ -1,3 +1,10 @@
+
+$lineHeight = $lineHeight is defined ? $lineHeight : 1.5em;
+
+$infoColor = $infoColor is defined ? $infoColor : #666;
+$errorColor = $errorColor is defined ? $errorColor : #c00;
+
+
 /* BLOCKS - FORMS
 ---------------------------------------------------------------------*/
 
