--- a/lib/css/blocks/a/link.styl
+++ b/lib/css/blocks/a/link.styl
@@ -1,6 +1,9 @@
 /* BLOCKS - LINKS
 ---------------------------------------------------------------------*/
 
+$linkColor = $linkColor is defined ? $linkColor : #36f;
+$linkHoverColor = $linkHoverColor is defined ? $linkHoverColor : #c33;
+
 a,
 .pseudoLink {
 	color: $linkColor;
