--- a/lib/css/useful.styl
+++ b/lib/css/useful.styl
@@ -5,6 +5,9 @@
  */
 
 
+$lineHeight = $lineHeight is defined ? $lineHeight : 1.5em;
+
+
 /* USEFUL
 ---------------------------------------------------------------------*/
 
